# PocketSSH-t-lora-pager

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  battery_measurement.cpp  c3_keyboard.cpp  deck_base.cpp  esp_lcd_st7796.c  idf_component.yml  ssh_terminal.cpp  tpager_base.cpp  tpager_diag.cpp  tpager_display.cpp  tpager_encoder.cpp  tpager_sd.cpp  tpager_tca8418.cpp  tpager_xl9555.cpp
main/include/: battery_measurement.hpp  c3_keyboard.hpp  esp_lcd_st7796.h  ssh_terminal.hpp  tpager_display.hpp  tpager_encoder.hpp  tpager_sd.hpp  tpager_tca8418.hpp  tpager_test_hook_config.hpp  tpager_xl9555.hpp  utilities.h
main/lvgl_pepboy_img/: pepboy_0.c  pepboy_1.c  pepboy_2.c  pepboy_3.c  pepboy_4.c  pepboy_5.c  pepboy_6.c  pepboy_7.c
misc/: flash_app_partition.py  package_tpager_bin.sh  serial_push_bin.py
release/v1.0.0/: README.md  SHA256SUMS.txt  flash_args
release/v1.1.0/: README.md  SHA256SUMS.txt  flash_args
release/v1.1.1/: README.md  SHA256SUMS.txt  flash_args
